Fix : overflow sur telephone

--- a/code/res/css/style.scss
+++ b/code/res/css/style.scss
@@ -71,7 +71,7 @@ main {
     flex-direction: column;
     gap: 32px;
     max-width: 1200px;
-    width: 100%;
+    width: calc(100% - 40px);
     margin: auto;
     padding-bottom: 24px;
     > .article_content {
@@ -222,13 +222,14 @@ main {
         }
         img {
           min-width: 160px;
-          min-height: 90px;
-
           width: 200px;
           @media (max-width: 1000px) {
             width: 100%;
           }
-          height: 150px;
+
+          //min-height: 90px;
+          //height: 150px;
+
           object-fit: cover;
           margin-right: 32px;
           border-radius: 6px;
